<!--
     Copyright (C) 2015 Kenneth Soh (itachi1706)
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">DroidEggs</string>

    <!-- App Shortcuts -->
    <string name="static_egg_label">View Current Egg</string>
    <string name="static_egg_long_label">View the egg for your device</string>
    <string name="static_egg_disabled_label">Viewing of your current egg is disabled</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lland">LLandActivity</string>
    <string name="title_activity_plat_logo_activity_lollipop">PlatLogoActivityLOLLIPOP</string>
    <string name="title_activity_plat_logo_activity_ics">PlatLogoActivityICS</string>
    <string name="title_activity_nyandroid">Nyandroid</string>
    <string name="title_activity_plat_logo_activity_gingerbread">PlatLogoActivityGINGERBREAD</string>
    <string name="title_activity_plat_logo_activity_jellybean">PlatLogoActivityJELLYBEAN</string>
    <string name="title_activity_bean_bag">BeanBag</string>
    <string name="title_activity_plat_logo_activity_honeycomb">PlatLogoActivityHONEYCOMB</string>
    <string name="title_activity_plat_logo_activity_kitkat">PlatLogoActivityKITKAT</string>
    <string name="title_activity_dessert_case">DessertCase</string>
    <string name="dessert_case">DessertCaseDream</string>
    <string name="title_activity_plat_logo_activity_lmp">PlatLogoActivityLMP</string>
    <string name="title_activity_plat_logo_activity_mnc">PlatLogoActivityMNC</string>
    <string name="title_activity_plat_logo_activity_marshmallow_mland">Marshmallow Land</string>

    <string name="update_link">https://github.com/itachi1706/DroidEggs/releases</string>
    <string name="link_updates">https://github.com/itachi1706/DroidEggs/releases/latest</string>

    <!-- name of the Q easter egg, a nonogram-style icon puzzle -->
    <string name="q_egg_name" translatable="false">Icon Quiz</string>

    <!-- name of the P easter egg, a humble paint program -->
    <string name="p_egg_name" translatable="false">PAINT.APK</string>

    <string name="r_egg_name" translatable="false">Cat Controls</string>
    <string name="s_egg_name" translatable="false">Paint Chips</string>
    <string name="close_button">Close Button</string>
    <string name="share_text">Share Text</string>
    <string name="cat_icon">Cat Icon</string>
    <string name="view_latest_egg_resource">Click to view easter egg for your current version of Android</string>
    <string name="required_android_version_sdk_sdkint_template" formatted="false">Required: Android %VERSION% (SDK %SDKINT%)</string>
    <string name="android_range_template">Android %RANGE%</string>
    <string name="android_version_template">%ANDROID VERSION%</string>
    <string name="add_player">Add Player</string>
    <string name="remove_player">Remove Player</string>
    <string name="start_game">Start Game</string>
    <string name="icon">This is a Icon</string>
    <string name="brush_button">This is a Brush action</string>
    <string name="color_button">This is a Color action</string>
    <string name="sample_button">This is a Sample action</string>
    <string name="zen_button">This is a Zen action</string>
    <string name="clear_button">This is a Clear action</string>
    <string name="android_logo">Android Logo</string>
    <string name="zero_text">0 text</string>
    <string name="one_text">1 text</string>
    <string name="sample_color">A1-500</string>
    <string name="sample_n_color">N1-500</string>
    <string name="sample_n2_color">N2-500</string>
    <string name="sample_a2_color">A2-500</string>
    <string name="sample_a3_color">A3-500</string>
</resources>
