<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="currentegg"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutShortLabel="@string/static_egg_label"
        android:shortcutLongLabel="@string/static_egg_long_label"
        android:shortcutDisabledMessage="@string/static_egg_disabled_label"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.itachi1706.droideggs"
            android:targetClass="com.itachi1706.droideggs.MainScreen" />
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.itachi1706.droideggs"
            android:targetClass="com.itachi1706.droideggs.CurrentEgg" />
    </shortcut>
</shortcuts>