<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:alignmentMode="alignBounds"
    android:columnCount="5"
    android:padding="0dp"
    android:rowCount="1"
    android:rowOrderPreserved="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:background="@drawable/s_roundrect"
        android:backgroundTint="@color/system_neutral1_500"
        android:fontFamily="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/sample_n_color"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:background="@drawable/s_roundrect"
        android:backgroundTint="@color/system_neutral2_500"
        android:fontFamily="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/sample_n2_color"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:background="@drawable/s_roundrect"
        android:backgroundTint="@color/system_accent1_500"
        android:fontFamily="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/sample_color"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:background="@drawable/s_roundrect"
        android:backgroundTint="@color/system_accent2_500"
        android:fontFamily="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/sample_a2_color"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:background="@drawable/s_roundrect"
        android:backgroundTint="@color/system_accent3_500"
        android:fontFamily="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/sample_a3_color"
        android:textColor="?android:attr/textColorPrimary" />
</GridLayout>